# tiefring

./: Cargo.toml  README.md
particles/: Cargo.toml
particles/src/: loops.rs  main.rs  systems.rs
rogue/: Cargo.toml  README.md
rogue/archive/: base.aseprite  chars.aseprite  tiles.aseprite  tiles_16.aseprite
rogue/src/: actions.rs  components.rs  effects.rs  engine.rs  game.rs  inputs.rs  main.rs  map.rs  spawner.rs  systems.rs  utils.rs
sample/: Cargo.toml
sample/src/: main.rs  utils.rs
snake/: Cargo.toml  README.md
snake/archive/: grass.aseprite
snake/src/: main.rs
src/: camera.rs  lib.rs  main.rs  renderer.rs  sprite.rs
src/shaders/: color.wgsl
tefrung/: Cargo.toml  README.md
tefrung/src/: camera.rs  lib.rs  renderer.rs  sprite.rs
tefrung/src/shaders/: sprite.wgsl
tiefring/: Cargo.toml
tiefring/src/: cache.rs  camera.rs  lib.rs  renderer.rs  resources.rs  shape.rs  sprite.rs  text.rs
tiefring/src/shaders/: color.wgsl  font.wgsl  render.wgsl  texture.wgsl
