[package]
name = "tefrung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
raw-window-handle = "0.3"
wgpu = "0.11"
winit = "0.25"
winit_input_helper = "0.10"
pollster = "0.2"
thiserror = "1.0"
pixels = "0.8"
