[package]
name = "rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tiefring = { path = "../tiefring" }
bevy_ecs = "0.7"
winit = "0.27"
winit_input_helper = "0.13"
pollster = "0.2"
rand = "0.8"
find_folder = "0.3"
anyhow = "1.0"
torchbearer = "0.5"
log = "0.4"
env_logger = "0.10"
