[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tiefring = { path = "../tiefring", features = ["svg"] }
winit = "0.27"
winit_input_helper = "0.13"
pollster = "0.2"
find_folder = "0.3"
