[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tiefring = { path = "../tiefring" }
winit = "0.26"
winit_input_helper = "0.11"
pollster = "0.2"
rand = "0.8"
find_folder = "0.3"
