[package]
name = "tiefring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytemuck = { version = "1.9", features = ["derive"] }
raw-window-handle = "0.4"
wgpu = "0.12"
thiserror = "1.0"
glam = "0.20"
image = "0.24"
fontdue = "0.7"
rect_packer = "0.2"
