[package]
name = "tiefring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytemuck = { version = "1.9", features = ["derive"] }
raw-window-handle = "0.5"
wgpu = "0.14"
thiserror = "1.0"
glam = "0.22"
image = "0.24"
fontdue = "0.7"
rect_packer = "0.2"
resvg = { version = "0.27", optional = true }

[features]
svg = ["dep:resvg"]
